cmake_minimum_required(VERSION 3.7)
project(apps)

add_subdirectory(create_a_window)
add_subdirectory(Hello_Triangle)
add_subdirectory(Hello_Triangle_Excercise_01)
add_subdirectory(Hello_Triangle_Excercise_02)
add_subdirectory(Hello_Triangle_Excercise_03)
add_subdirectory(Shader)
add_subdirectory(Shader_Excercise_01)
add_subdirectory(Shader_Excercise_02)
add_subdirectory(Shader_Excercise_03)
add_subdirectory(Texture)
add_subdirectory(Texture_Exercise_02)
add_subdirectory(Texture_Exercise_03)
add_subdirectory(Texture_Exercise_04)