cmake_minimum_required(VERSION 3.7)
project(apps)

# add_subdirectory(create_a_window)
# add_subdirectory(Hello_Triangle)
# add_subdirectory(Hello_Triangle_Excercise_01)
# add_subdirectory(Hello_Triangle_Excercise_02)
# add_subdirectory(Hello_Triangle_Excercise_03)
# add_subdirectory(Shader)
# add_subdirectory(Shader_Excercise_01)
# add_subdirectory(Shader_Excercise_02)
# add_subdirectory(Shader_Excercise_03)
# add_subdirectory(Texture)
# add_subdirectory(Texture_Exercise_02)
# add_subdirectory(Texture_Exercise_03)
# add_subdirectory(Texture_Exercise_04)
# add_subdirectory(Transformations)
# add_subdirectory(Transformations_Exercise_02)
# add_subdirectory(Coordinate-Systems)
# add_subdirectory(Camera)
# add_subdirectory(Camera_Excercise_01)
# add_subdirectory(Lighting_Colors)
# add_subdirectory(Lighting_Basic_Lighting)
# add_subdirectory(Lighting_Basic_Lighting_Exercise_03)
# add_subdirectory(Lighting_Basic_Lighting_Exercise_04)
# add_subdirectory(Lighting_Materials)
# add_subdirectory(Lighting_Maps)
# add_subdirectory(Lighting_Casters)
add_subdirectory(Lighting_Multiple)
add_subdirectory(Model_Loading_Assimp)